Downgrade Java parser JDK baseline to Java 17, and fix some tests.